# dahuaxvr-python

./: .gitignore  pyproject.toml  requirements.txt
app/: download_files.py  files.py  player.py  show_camera.py
dahuaxvr/: camera_stream.py  dahua_cgi.py  table.py
dahuaxvr/cgi/: config_manager.py  encode.py  load_file.py  magic_box.py  media_file_find.py  snapshot.py
dahuaxvr/model/: media_file_finder.py
scripts/: fetch_files.sh
tests/: table_tests.py
